--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "6",
     "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.196",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
