--- a/package.json
+++ b/package.json
@@ -10,32 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/node": "^20.8.2",
     "autoprefixer": "^10.4.15",
     "canvas-to-buffer": "^3.0.1",
     "lodash": "^4.17.21",
+    "node-sass": "^9.0.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "6",
+    "sass": "^1.69.0",
     "socket.io-client": "^4.7.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.196",
+    "@types/node": "^20.8.3",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.4.5"
   }
 }
