--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ramonak/react-progress-bar": "^5.0.3",
     "autoprefixer": "^10.4.15",
     "canvas-to-buffer": "^3.0.1",
     "lodash": "^4.17.21",
