--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ramonak/react-progress-bar": "^5.0.3",
     "autoprefixer": "^10.4.15",
     "canvas-to-buffer": "^3.0.1",
+    "fuse.js": "^7.0.0",
     "lodash": "^4.17.21",
     "node-sass": "^9.0.0",
     "postcss": "^8.4.29",
